<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <io.github.lee0701.mboard.settings.preference.ListPreference
        app:key="input_layout_preset"
        app:entries="@array/empty"
        app:entryValues="@array/empty"
        app:defaultValue="preset/preset_empty.yaml"
        app:title="@string/pref_layout_preset_title"
        app:summary="@string/pref_layout_preset_summary" />

    <io.github.lee0701.mboard.settings.preference.PreferenceCategory
        app:title="@string/pref_soft_keyboard_header_title">

        <io.github.lee0701.mboard.settings.preference.SwitchPreference
            app:key="soft_keyboard_default_height"
            app:defaultValue="true"
            app:title="@string/pref_appearance_default_height_title"
            app:summary="@string/pref_appearance_default_height_summary" />

        <io.github.lee0701.mboard.settings.preference.SliderPreference
            app:key="soft_keyboard_row_height"
            app:valueFrom="30.0"
            app:valueTo="100.0"
            app:stepSize="5.0"
            app:defaultValue="@string/pref_appearance_keyboard_height_default"
            app:title="@string/pref_appearance_keyboard_height_title"
            app:useSimpleSummaryProvider="true"/>

    </io.github.lee0701.mboard.settings.preference.PreferenceCategory>

    <io.github.lee0701.mboard.settings.preference.PreferenceCategory
        app:key="input_layer"
        app:title="@string/pref_input_header_title">

        <io.github.lee0701.mboard.settings.preference.ListPreference
            app:key="input_engine_type"
            app:defaultValue="Latin"
            app:entries="@array/input_engine_type_entries"
            app:entryValues="@array/input_engine_type_values"
            app:title="@string/pref_input_engine_type_title"
            app:useSimpleSummaryProvider="true" />

        <io.github.lee0701.mboard.settings.preference.SwitchPreference
            app:key="input_hanja_conversion"
            app:defaultValue="false"
            app:title="@string/pref_input_hanja_conversion_title"
            app:summary="@string/pref_input_hanja_conversion_summary" />

    </io.github.lee0701.mboard.settings.preference.PreferenceCategory>

</PreferenceScreen>