<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <io.github.lee0701.mboard.settings.PreferenceCategory
        app:title="@string/pref_header_behaviour_title">

        <io.github.lee0701.mboard.settings.SwitchPreference
            app:key="behaviour_show_popups"
            app:defaultValue="true"
            app:title="@string/pref_behaviour_show_popups_title" />

        <io.github.lee0701.mboard.settings.SwitchPreference
            app:key="behaviour_show_more_keys"
            app:defaultValue="true"
            app:title="@string/pref_behaviour_show_more_keys_title"
            app:summary="@string/pref_behaviour_show_more_keys_summary" />

        <io.github.lee0701.mboard.settings.SliderPreference
            app:key="behaviour_double_tap_gap"
            app:valueFrom="100.0"
            app:valueTo="1000.0"
            app:stepSize="100.0"
            app:defaultValue="500.0"
            app:title="@string/pref_behaviour_double_tap_gap_title"
            app:useSimpleSummaryProvider="true" />

        <io.github.lee0701.mboard.settings.SliderPreference
            app:key="behaviour_long_press_duration"
            app:valueFrom="100.0"
            app:valueTo="1000.0"
            app:stepSize="100.0"
            app:defaultValue="500.0"
            app:title="@string/pref_behaviour_long_press_duration_title"
            app:useSimpleSummaryProvider="true" />

        <io.github.lee0701.mboard.settings.ListPreference
            app:key="behaviour_long_press_action"
            app:defaultValue="shift"
            app:entries="@array/long_press_actions"
            app:entryValues="@array/long_press_action_values"
            app:title="@string/pref_behaviour_long_press_action_title"
            app:useSimpleSummaryProvider="true" />

        <io.github.lee0701.mboard.settings.SliderPreference
            app:key="behaviour_repeat_interval"
            app:defaultValue="50.0"
            app:valueFrom="10.0"
            app:valueTo="200.0"
            app:stepSize="10.0"
            app:title="@string/pref_behaviour_repeat_interval_title"
            app:useSimpleSummaryProvider="true" />

        <io.github.lee0701.mboard.settings.ListPreference
            app:key="behaviour_slide_action"
            app:defaultValue="flick"
            app:entries="@array/slide_actions"
            app:entryValues="@array/slide_action_values"
            app:title="@string/pref_behaviour_slide_action_title"
            app:useSimpleSummaryProvider="true" />

        <io.github.lee0701.mboard.settings.SliderPreference
            app:key="behaviour_flick_sensitivity"
            app:valueFrom="10.0"
            app:valueTo="200.0"
            app:stepSize="10.0"
            app:defaultValue="60"
            app:title="@string/pref_behaviour_flick_sensitivity_title"
            app:useSimpleSummaryProvider="true" />

        <io.github.lee0701.mboard.settings.ListPreference
            app:key="behaviour_flick_action_up"
            app:defaultValue="shift"
            app:entries="@array/flick_actions"
            app:entryValues="@array/flick_action_values"
            app:title="@string/pref_behaviour_flick_action_up_title"
            app:useSimpleSummaryProvider="true" />

        <io.github.lee0701.mboard.settings.ListPreference
            app:key="behaviour_flick_action_down"
            app:defaultValue="symbol"
            app:entries="@array/flick_actions"
            app:entryValues="@array/flick_action_values"
            app:title="@string/pref_behaviour_flick_action_down_title"
            app:useSimpleSummaryProvider="true" />

        <io.github.lee0701.mboard.settings.ListPreference
            app:key="behaviour_flick_action_left"
            app:defaultValue="none"
            app:entries="@array/flick_actions"
            app:entryValues="@array/flick_action_values"
            app:title="@string/pref_behaviour_flick_action_left_title"
            app:useSimpleSummaryProvider="true" />

        <io.github.lee0701.mboard.settings.ListPreference
            app:key="behaviour_flick_action_right"
            app:defaultValue="none"
            app:entries="@array/flick_actions"
            app:entryValues="@array/flick_action_values"
            app:title="@string/pref_behaviour_flick_action_right_title"
            app:useSimpleSummaryProvider="true" />

    </io.github.lee0701.mboard.settings.PreferenceCategory>

</PreferenceScreen>